# zero2prod

./: Cargo.toml  rusty-hook.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: config.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
