[package]
authors = ["Beau Gieskens <beau.gieskens@gmail.com>"]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4"
chrono = {version = "0.4", default-features = false, features = ["clock"]}
config = "0.13"
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
uuid = {version = "1", features = ["v4"]}

[dependencies.sqlx]
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "offline",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
version = "0.6"

[dev-dependencies]
rusty-hook = "0.11"
